<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_description"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textIsSelectable="true"
        android:text="@string/placeholder_description"
        android:textSize="12sp" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/dialog_date_created"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/itemDateCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textIsSelectable="true"
        android:text="@string/placeholder_date_created"
        android:textSize="12sp" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/dialog_center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/itemCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textIsSelectable="true"
        android:text="@string/placeholder_center"
        android:textSize="12sp" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/dialog_nasa_id"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/itemNASAID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textIsSelectable="true"
        android:text="@string/placeholder_nasa_id"
        android:textSize="12sp" />


</LinearLayout>